Inconsistent blocklist behavior
IGT runner behavior for blocklist is inconsistent and hard to reproduce.
See, for this test:
$ ./build/tests/xe_huc_copy --list
huc_copy
there is one subtest: igt@xe_huc_copy@huc_copy
.
If we create two test lists like:
$ echo "igt@xe_huc_copy" >my.list
$ echo "igt@xe_huc_copy@huc_copy" >huc_copy.list
Both testlists can be used to run it:
$ sudo ./build/runner/igt_runner -o build/tests result --test-list my.list
[505901.678561] [1/1] xe_huc_copy
[505910.873413] [IGT] xe_huc_copy: executing
[505910.906835] [IGT] xe_huc_copy: exiting, ret=77
Done.
$ sudo ./build/runner/igt_runner -o build/tests --test-list huc_copy.list results
[sudo] password for mchehab:
[511098.863834] [1/1] xe_huc_copy (huc_copy)
[511108.137153] [IGT] xe_huc_copy: executing
[511108.159667] [IGT] xe_huc_copy: exiting, ret=77
Done.
But, blocklisting such test is problematic:
- blocklisting the full test name won't work:
$ sudo ./build/runner/igt_runner -o build/tests result --test-list my.list -b huc_copy.list
[507883.089788] [1/1] xe_huc_copy
[507892.284821] [IGT] xe_huc_copy: executing
[507892.305065] [IGT] xe_huc_copy: exiting, ret=77
Done.
2. blocklisting the xe_huc_copy file works:
$ sudo ./build/runner/igt_runner -o build/tests --test-list my.list -b huc_copy.list -L igt@xe_huc_copy $